--- a/market/templates/home.html
+++ b/market/templates/home.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block title %}
-    Welcome to E-commerce Lab
+    ReSh | Genuine & Authentic
 {% endblock %}
 {% block content %}
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark" style="color:white">
         <div class="col-md-5 p-lg-5 mx-auto my-5">
-            <h1 class="display-4 font-weight-normal">Online Store</h1>
+            <h1 class="display-4 font-weight-normal">ReSh</h1>
             <p class="lead font-weight-normal">Start purchasing products by clicking the link below</p>
             <a class="btn btn-primary" href="{{ url_for('market_page') }}">Get Started</a>
         </div>
